# das-first-lesson

base/: CheckYourself.py  checkyourself.py  checkyourself2.py  comprehensions.py  data_types.py  dict_.py  from tkinter import Tk, Frame, BOTH.py  func.py  libdas.py  linux_commands.txt  lists.py  logical_exp.py  loops.py  set.py  strings.py  try_exepct.py
botpars/: bpars.py  pyproject.toml  requirements.txt
files/: file.json  file2.json  json_.py  main.py  new_file.txt  py33.txt  text.txt
front/: index.html
functions/: build_in_functions.py  decorators.py  scopes.py
functions/test/: pyproject.toml  test_ponchik.py
git_github/: git.py
parsing/: file.csv  maain.py  pyproject.toml
